--- a/meta/main.yml
+++ b/meta/main.yml
@@ -27,13 +27,9 @@ galaxy_info:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
   platforms:
-    - name: RedHat
+    - name: GenericLinux
       versions:
-      - any
-
-    - name: CentOS
-      versions:
-      - any
+        - any
 
   galaxy_tags:
     - hadoop
