--- a/tasks/master.yml
+++ b/tasks/master.yml
@@ -3,23 +3,24 @@
 - name: Configuring core-site.xml file
   template:
     src: templates/core-site.xml
-    dest: "{{hadoop_dir}}/core-site.xml"
+    dest: "{{ hadoop_dir }}/core-site.xml"
 
 - name: Configuring hdfs-site.xml file
   template:
     src: templates/hdfs-site.xml
-    dest: "{{hadoop_dir}}/hdfs-site.xml"
+    dest: "{{ hadoop_dir }}/hdfs-site.xml"
 
 - block:
     - name: Formatting NameNode
       command: "hadoop namenode -format -nonInteractive"
 
-  rescue: 
-    - debug: 
+  rescue:
+    - debug:
         msg: "Hadoop Metadata Directory already exists...No need to format"
 
 - name: Starting Hadoop NameNode services
   shell: "hadoop-daemon.sh stop namenode; hadoop-daemon.sh start namenode"
+  changed_when: True
 
 - name: Registering the IP of the NameNode
   add_host:
